# sachima

./: .gitignore  Cargo.toml  README.md
docs/: README-zh.md
jwt-codec/: Cargo.toml
jwt-codec/src/: claims.rs  lib.rs  prelude.rs  tests.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
migration/src/tables/: mod.rs  registry.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  reply.rs  router.rs  utils.rs
server/src/config/: log_level.rs  workspace.rs
server/src/handlers/: file_system.rs
server/src/handlers/file_system/: tests.rs
server/src/models/: fs.rs
server/tests/assets/: config.toml
src/: db.rs  lib.rs  main.rs  reply.rs  router.rs  utils.rs
src/config/: mod.rs  workspace.rs
src/entity/: mod.rs  prelude.rs  registry.rs
src/handlers/: mod.rs  permission.rs
src/handlers/file_system/: mod.rs  tests.rs
src/middlewares/: jwt.rs  mod.rs
src/models/: fs.rs  mod.rs  permission.rs
src/utils/: mod.rs  pswd.rs  tests.rs  time.rs
tests/assets/: config.toml
