[workspace]
members = [".", "jwt-codec", "migration"]

[package]
name = "sachima"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt-codec = { path = "jwt-codec" }
bytes = { version = "1.4.0", features = ["serde"] }
bytesize = { version = "1.2.0", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
fs-set-times = "0.19.1"
indoc = "2.0.1"
poem = { version = "1.3.55", features = ["multipart"] }
serde = { version = "1.0.163", features = ["derive"] }
shellexpand = "3.1.0"
thiserror = "1.0.40"
time = { version = "0.3.21", features = [
  "serde-human-readable",
  "local-offset",
] }
toml = "0.7.3"
once_cell = "1.17.1"
tracing-subscriber = "0.3.17"
sha2 = "0.10.6"

[dependencies.tokio]
version = "1.28.1"
features = ["rt-multi-thread", "io-util", "fs"]
default-features = false

[dependencies.tokio-stream]
version = "0.1.14"
features = ["fs"]
default-features = false

[dependencies.sea-orm]
version = "0.11.3"
features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls"]
default-features = false

[dev-dependencies]
dirs = "5.0.1"
poem = { version = "1.3.55", features = ["test"] }
tempdir = "0.3.7"

[dev-dependencies.tokio]
version = "1.28.1"
features = ["macros"]
default-features = false
