[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros"]

[dependencies.sea-orm-migration]
version = "0.11.0"
features = ["runtime-tokio-native-tls", "sqlx-postgres"]
