[package]
name = "sachima"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
bytesize = { version = "1.2.0", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
fs-set-times = "0.19.1"
indoc = "2.0.1"
once_cell = "1.17.1"
poem = "1.3.55"
serde = { version = "1.0.163", features = ["derive"] }
shellexpand = "3.1.0"
thiserror = "1.0.40"
toml = "0.7.3"
tracing-subscriber = "0.3.17"

[dependencies.tokio]
version = "1.28.1"
features = ["rt-multi-thread", "io-util", "fs"]
